--- a/public/views/entidades.html
+++ b/public/views/entidades.html
@@ -1,20 +1,23 @@
 <div class="container">
 	<div class="row panel panel-primary container">
 		<div class="row">
-			<h1 class=" col-md-offset-4 col-md-8"><span class="glyphicon glyphicon-time"></span>   Controle de horas</h1>
+			<h1 style="text-align: center"><span class="glyphicon glyphicon-time"></span>   Controle de horas</h1>
 		</div>
 		<div class="row">
-			<div class=" col-md-offset-8 col-md-3" style="font-size: 1em; text-align: right;">Bem vindo {{logado.nome}} {{logado.sobrenome}}!</div>
-			<button ng-click="sair()" style="max-width: 6em; min-width: 2em; min-height: 1.7em" type="button" class="btn btn-danger btn-default btn-xs">
+			<div class=" col-md-offset-7 col-md-4" style="font-size: 1.4em; text-align: right;">Bem vindo <label>{{logado.nome}} {{logado.sobrenome}}</label>!</div>
+			<button ng-click="minimizar()" type="button" class="btn btn-danger btn-default btn-s">
 				<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
 			</button>
+			<button ng-click="sair()" type="button" class="btn btn-warning btn-default btn-s">
+				<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+			</button>
 			<br>
-			<div class="row">
-				<div class="col-md-2 col-md-offset-1">
-					<button type="button" class="btn btn-success" data-target="#adicionarUsuario" data-toggle="modal">Adicionar Usuário</button>
-				</div>
-			</div>
 		</div>
+			<br>
+			<div class="row col-md-2" style="margin-left: 1em;">
+					<button type="button" class="btn btn-success" data-target="#adicionarUsuario" data-toggle="modal">Adicionar Usuário</button>
+			</div>
+		<br>
 		<div class="panel-body tabelaGerencia">
 			<table class="table table-bordered table-striped">
 				<thead>
@@ -44,15 +47,14 @@
 				</tr>
 				</tbody>
 			</table>
-		</div>
-		<div class="row" style="margin-left: 1em">
-			<button ng-click="trocaRota('home')" style="max-width: 5em;" type="button" class=" btn btn-primary btn-default btn-lg">
-				<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-			</button>
-			<button ng-click="trocaRota('relatorio')" style="max-width: 5em;" type="button" class=" btn btn-primary btn-default btn-lg">
-				<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-			</button>
-			<img style="width: 30em;" class="col-md-offset-7 col-md-2" src="../../imagens/CDHicon.png">
+			<div class="row" style="margin-left: 1em; margin-bottom: 1em" >
+				<button ng-click="trocaRota('home')" style="max-width: 5em;" type="button" class=" btn btn-primary btn-default btn-lg">
+					<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+				</button>
+				<button ng-click="trocaRota('relatorio')" style="max-width: 5em;" type="button" class=" btn btn-primary btn-default btn-lg">
+					<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+				</button>
+			</div>
 		</div>
 	</div>
 </div>
