--- a/public/views/login.html
+++ b/public/views/login.html
@@ -2,14 +2,16 @@
     <div class="panel-primary panel">
         <div class="col-md-7 col-md-offset-2" style="text-align: center">
             <div class="panel-heading">
-                <h1>Bem vindo ao Controle de Horas!</h1>
+                <h1>Bem vindo ao Controle de Horas!
+                    <img style="width: 5em;"  src="../../imagens/CDHicon.png">
+                </h1>
             </div>
         </div>
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-5 col-md-offset-3">
                     <div>
-                        <h4>Faça seu login abaixo:</h4>
+                        <h4>Faça seu <label>login</label> abaixo:</h4>
                     </div>
                     <form name="formDevMan">
                         <div class="form-group" ng-class="{ 'has-error' : !validoEmailCadastrado}">
@@ -28,6 +30,7 @@
                         </div>
                         <div class="form-group">
                             <button class="btn btn-lg btn-primary btn-block" ng-click="logar()">Logar</button>
+                            <button class="btn btn-lg btn-success btn-block" ng-click="logarRelat()">Visualizar Relatório</button>
                         </div>
                         <div>
                             <div ng-show="!validoSenha" class="msg-erro control-label">
