Implementado erro de relatorio vazio e mudanças de interface

--- a/public/partial/modalErroDois.html
+++ b/public/partial/modalErroDois.html
@@ -1,5 +1,5 @@
 <div class="modal-dialog">
-    <div class="modal-content" style="background-color:indianred; border-style: solid; border-color:black;">
+    <div class="modal-content" style="background-color:#ff4d4d; border-style: solid; border-color:black;">
         <div class="modal-dialog">
             <h4 class="modal-title" style="text-align: center">Novas senhas incompatíveis!</h4>
             <button type="button" style="width: 2.5em; height: 2.2em;" class="btn btn-default btn-primary btn-xs close" data-target="#alterarSenha" data-toggle="modal" data-dismiss="modal" >
