--- a/public/partial/modalHoraInvalida.html
+++ b/public/partial/modalHoraInvalida.html
@@ -1,5 +1,5 @@
 <div class="modal-dialog">
-    <div class="modal-content" style="background-color:indianred; border-style: solid; border-color:black;">
+    <div class="modal-content" style="background-color:#ff4d4d; border-style: solid; border-color:black;">
         <div class="modal-dialog">
             <h4 class="modal-title" style="text-align: center">Horário inválido. Por favor, insira um horário maior que {{hora}}.</h4>
             <button type="button" style="width: 2.5em; height: 2.2em;" class="btn btn-default btn-xs close" data-dismiss="modal">
