--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,7 +4,7 @@
 			<h1 style="text-align: center"><span class="glyphicon glyphicon-time"></span>   Controle de horas</h1>
 		</div>
 		<div class="row">
-			<div class=" col-md-offset-7 col-md-4" style="font-size: 1.4em; text-align: right;">Bem vindo <label>{{logado.nome}} {{logado.sobrenome}}</label>!</div>
+			<div class="col-md-offset-4 col-md-7" style="font-size: 1.4em; text-align: right;">Bem vindo <label>{{logado.nome}} {{logado.sobrenome}}</label>!</div>
 			<button ng-click="minimizar()" type="button" class="btn btn-danger btn-default btn-s" ng-show="saidaregistrada">
 				<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
 			</button>
@@ -92,7 +92,7 @@
 <!--MODAL SIM-->
 <div id="Sim" class="modal fade" role="dialog">
 	<div class="modal-dialog" >
-		<div class="modal-content" style="background-color:green; border-style: solid; border-color:black;">
+		<div class="modal-content" style="background-color:#80ff80; border-style: solid; border-color:black;">
 			<div class="modal-body text-center">
 				<p>Horário salvo. Até amanhã!
 					<button type="button" style="width: 2.5em; height: 2.2em;" class="btn btn-default btn-primary btn-xs close" data-dismiss="modal" ng-click="sair()">
