--- a/public/partial/modalAdicionarUsuario.html
+++ b/public/partial/modalAdicionarUsuario.html
@@ -1,7 +1,7 @@
 <div>
     <div class="modal-dialog">
         <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:#2b669a;">
-            <div class="modal-header" style="background-color: #2b669a">
+            <div class="modal-header" style="background-color: #3399ff">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h2 class="modal-title" style="text-align: center"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  Adicionar usuário</h2>
             </div>
@@ -80,7 +80,7 @@
 <!--MODAL USUARIO VALIDO-->
 <div id="usuarioValido" class="modal fade" role="dialog">
     <div class="modal-dialog" >
-        <div class="modal-content" style="background-color:green; border-style: solid; border-color:black;">
+        <div class="modal-content" style="background-color:#80ff80; border-style: solid; border-color:black;">
             <div class="modal-body">
                 <br>
                 <h4 class="modal-title text-center">Usuário adicionado!</h4>
