--- a/public/partial/modalAlterarSenha.html
+++ b/public/partial/modalAlterarSenha.html
@@ -1,7 +1,7 @@
 <!--MODAL ALTERAR SENHA-->
 <div class="modal-dialog">
     <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color:#2b669a;">
-        <div class="modal-header" style="background-color: #2b669a">
+        <div class="modal-header" style="background-color: #3399ff">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h2 class="modal-title" style="text-align: center"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> Alterar senha</h2>
         </div>
