--- a/public/partial/modalPerfilUsuario.html
+++ b/public/partial/modalPerfilUsuario.html
@@ -1,6 +1,6 @@
 <div class="modal-dialog">
     <div class="modal-content" style="background-color:#e3f2fd; border-style: solid; border-color: #2b669a">
-        <div class="modal-header" style="background-color: #2b669a">
+        <div class="modal-header" style="background-color: #3399ff">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h2 class="modal-title" style="text-align: center"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Perfil do usuário</h2>
         </div>
