banco de horas incrementado no relatorio

--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -50,7 +50,7 @@
                 <thead>
                 <tr>
                     <label>Colaborador: <span>{{mostrausuario}}</span></label>
-                    <label class="col-md-offset-3">Banco de Horas Mensal: <span>{{bancomes}}</span></label>
+                    <label class="col-md-offset-3">Horas Mensais Restantes: <span>{{bancomes}}</span></label>
                 </tr>
                 <tr>
                     <th class="text-center">Dia</th>
