--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -121,13 +121,13 @@
                     </div>
 
                     <div class="form-group" style="max-width: 15em; margin: auto; margin-top: 1ex;">
-                        <label class="control-label">Quantidade(horas):</label>
+                        <label class="control-label">Quantidade(minutos):</label>
                         <input class="form-control" type="number" ng-model="addhora.valor">
                     </div>
 
                     <div class="form-group" style="max-width: 15em; margin: auto; margin-top: 1ex;">
-                        <label class="control-label">Quantidade(minutos):</label>
-                        <input class="form-control" type="number" ng-model="addhora.valor">
+                        <label class="control-label">Justificativa:</label>
+                        <textarea  class="form-control" type="text" ng-model="addhora.justi"></textarea>
                     </div>
 
                     <div style="max-width: 15em; margin: auto; margin-top: 1ex;">
