--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -149,6 +149,30 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div id="retMsgBanco" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Retorno horas justificadas</h4>
+            </div>
+            <div class="modal-body">
+                <p>{{msgBanco}} ao adicionar horas.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="voltarmodal('addHoras')">
+                    <i class="glyphicon glyphicon-repeat"></i>Voltar
+                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <!--MODAL CONFIRMAÇÃO-->
 <div id="confirmacao" class="modal fade" role="dialog">
     <div class="modal-dialog" >
