--- a/public/views/relatorio.html
+++ b/public/views/relatorio.html
@@ -58,7 +58,10 @@
                 <thead>
                 <tr>
                     <label>Colaborador: <span>{{mostrausuario}}</span></label>
-                    <label class="col-md-offset-3">Horas Mensais Restantes: <span>{{bancomes}}</span></label>
+                    <label class="col-md-offset-3">
+                        Horas Mensais Restantes: <span>{{bancomes}}</span> <br>
+                        Horas Mensais Justificadas: {{totalHorasJusti.horas}}:{{totalHorasJusti.minutos}}
+                    </label>
                 </tr>
                 <tr>
                     <th class="text-center">Dia</th>
